@@ -15,6 +15,10 @@
 	(the divide by 2 issue for the 18f addressess was not being handled
 	correctly.)
 	
+2004-06-01 Scott Dattalo <scott@dattalo.com>
+	* src/value.h: Made the string &name() member function in the 
+	gpsimValue class virtual.
+	
 2004-05-31 Scott Dattalo <scott@dattalo.com>
 	* almost all files: Since the Register class and the Instruction class
 	are now derived from gpsimValue, all objects that use registers
